# SuperGamepadPlus

./: .gitignore  .gitmodules  README.md  SuperGamepadPlus Battery Clip.step
FW/: CMakeLists.txt  SUPERGAMEPAD_RP2040_manifest.json  manifest.json
FW/ESP32/: CMakeLists.txt  sdkconfig  sdkconfig.old
FW/ESP32/main/: CMakeLists.txt  core_bt_switch.c  core_bt_xinput.c  main.c  switch_analog.c  switch_commands.c  switch_spi.c  util_bt_hid.c
FW/ESP32/main/include/: core_bt_switch.h  core_bt_xinput.h  hoja.h  hoja_includes.h  util_bt_hid.h
FW/ESP32/main/include/switch/: hoja.h  switch_commands.h  switch_spi.h
FW/RP2040/: CMakeLists.txt
FW/RP2040/include/: board_config.h  main.h
FW/RP2040/src/: main.c
FW/include/: board_config.h  main.h
FW/src/: app_hwtest.c  main.c
PCB/legacy_main_pcb/: fp-info-cache  sgpp_main_pcb.kicad_pro  sgpp_main_pcb.xml  sym-lib-table
PCB/main_pcb/: fp-info-cache  fp-lib-table  sgpp_main_pcb.csv  sgpp_main_pcb.kicad_pcb  sgpp_main_pcb.kicad_prl  sgpp_main_pcb.kicad_pro  sgpp_main_pcb.kicad_sch  sgpp_main_pcb.xml
PCB/main_pcb/sgpp_main_pcb/: sgpp_main_pcb.kicad_pro
PCB/production/: Super Gamepad+ PCB Notes.xlsx  SuperGamepad+_BOM.xlsx
PCB/production/main/gerber/: sgpp_main_pcb-B_Courtyard.gbr  sgpp_main_pcb-B_Cu.gbr  sgpp_main_pcb-B_Fab.gbr  sgpp_main_pcb-B_Mask.gbr  sgpp_main_pcb-B_Paste.gbr  sgpp_main_pcb-B_Silkscreen.gbr  sgpp_main_pcb-Edge_Cuts.gbr  sgpp_main_pcb-F_Cu.gbr  (+11 more)
PCB/production/main_pcb/: SuperGamepad+_BOM.xlsx
PCB/production/trigger_clicky/: SNES_Trigger_Tactile_PCB v16.txt
PCB/sgpp_2/: sgpp_2_pcb.kicad_prl
(+38 files in other folders)
